--- a/ConcursoNestle/ConcursoNestle.csproj
+++ b/ConcursoNestle/ConcursoNestle.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="Pages\HomePageLoggedIn.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\LockPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
